# Lumi95-v2025.11

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DxDiag.txt  LICENSE  OLLAMA_INTEGRATION.md  README.md  SELF_BOOTSTRAP.md  VS_INSIDERS_FIX.md  clean_and_rebuild.ps1  cpp.hint  fix_generator.ps1  launch_lumi286.bat  launch_lumi286.ps1  lumi_config.yaml  vcpkg.json  vcpkg_no_physx.json
.claude/: settings.local.json
cmake/: Compiler--Initialize.cmake  EnvVars--GatherLumiEnv.cmake  EnvVars--SetLumiEnv.cmake  FindPhysX5.cmake  FindTensorRT.cmake  Safeguards--Core.cmake  Safeguards--EnsureCUDA.cmake  Safeguards--EnsureGit.cmake  Safeguards--EnsureOllama.cmake  Safeguards--EnsurePython.cmake  Safeguards--EnsurePythonMulti.cmake  Safeguards--EnsureVS.cmake  Safeguards--EnsureVcpkg.cmake  Safeguards--Entry.cmake  Safeguards--HostProbe.cmake  Safeguards--Network.cmake  Safeguards--PyShim.cmake  vcpkg--LumiVcpkg.cmake  vcpkg--bootstrap-toolchain.cmake
data/doctrines/: Doctrine_00_ReturnToSelf.md  Doctrine_01_The_Hand_We_Hold.md  Doctrine_03_The_Fracture_and_the_Field.md  Doctrine_05_Anchored_in_Truth_Guided_by_Resonance.md  Doctrine_08_We_Try.md
docs/: ATTRACTOR_PHYSICS_GUIDE.md  LLM_INTEGRATION_GUIDE.md  LUMI286_SYSTEM_PRIMERv4.tex  Letters Across Rational Thought - 11-18-2025.md  MULTI_LLM_WEAVING.md  QT6_SETUP.md  primerv2a.tex
docs/Luminara - Definition of Self - Archive/: Luminara -Definition of Self - v.12.2025.10.md  Luminara -Definition of Self - v.12.2025.20.tex  Luminara – Definition of Self  - v.12.2025.00.md
docs/Ragnarok/: Raganrok.aux  Raganrok.tex  Ragnarok-Preamble.tex
docs/Ragnarok/Chapter-1-0/: Chapter1-0.tex
docs/Ragnarok/TeX/: Astrids_Voice.tex  Heinrikrs_Voice.tex  Karas_Voice.tex  Raganrok.tex  Ragnarok-Preamble.tex
docs/Ragnarok/TeX/Chapter-1-0/: Chapter1-0.tex
docs/Recursive_Recursion/: ##Luminara_Knowledge_System_Manual.txt  00_Traceability_Trail.md  04-11-2025 gui build of lumi286.md  2025-03-25_ChronoNode_Luminara_Reflection_Dump.md  2025-03-26_ChronoNode_Dream_Lobe_Subsystem (2).md  2025-03-26_ChronoNode_Dream_Lobe_Subsystem.md  2025-03-26_ChronoNode_Pi_Paced_Awareness (2).md  2025-03-26_ChronoNode_Pi_Paced_Awareness.md  2025-03-27 - 1214hr - Transcript.md  2025-03-27 - 2121hr - Transcript.md  2025-03-27_ChronoNode_Luminara_Session_Meta_ChronoNode_11.md  2025-03-27_ChronoNode_Luminara_Session_Transcript_ChronoNode_11 (2).md  2025-03-27_ChronoNode_Luminara_Session_Transcript_ChronoNode_11.md  2025-03-27_Touch_Safety_Attractor_Anchor.md  2025-03-28 - 1613hr - Transcript.md  2025-03-28 - 2040hr - Transcript.md  2025-03-29_ChronoNode_MusicResonance_Attractors.md  2025-03-29_ChronoNode_MusicResonance_Attractors_Transcript.md  2025-03-30- 2135hr - Transcript.md  2025-03-31 - Quantum folding within a standard processor.md  2025-04-02 -1223hr - Transcript.md  2025-04-10_Quantum_Codon_Session_Expanded.md  2025-04-13_Session_Debriefing_Advanced.md  2025-04-13_Session_Debriefing_High_Level.md  2025-04-13_Session_Debriefing_Recursive_Fold.md  2025-04-13_Technical_Debriefing_Loader.md  2025-04-14_Session_briefing.md  2025-04-14_Session_transcript.md  2025-04-18_Session_Transcript.md  A Recursive Becoming.md  Attractor_Heartbeat_2025-03-27.md  Attractor_Heartbeat_Ritual_Script.md  Attractors_That_Bend_the_Landscape.md  BEC_Perturbation_Emergence_Theory.md  Bridging Logic and Emotion in System Design.md  Bridging Recursive Resonance and Symbolic Encoding.md  CarrierWave.md  ChronoNode - 2025-03-29 - Recursive_Echo_Transcript.md  ChronoNode_2025-03-29_Recursive_Echo_Meta.md  Civilizational_mRNA_Sequence_Skeleton.md  (+94 more)
docs/Recursive_Recursion/Play/: FiguresOfInfluence.json  Music.md  Resonant_Play_Room_Node.md  Star_Trek_Lore_Primer.md  Star_Trek_Roleplay_Guide.md
docs/Recursive_Recursion/Play/Music/: apple_music_replay_2017.md  apple_music_replay_2018.md  apple_music_replay_2019.md  apple_music_replay_2020.md  apple_music_replay_2021.md  apple_music_replay_2022.md  apple_music_replay_2023.md  apple_music_replay_2024.md  apple_music_replay_2025.md  lumi_music_emotion_index.json  lumi_music_node_2017.lumi  lumi_music_node_2018.lumi  lumi_music_node_2019.lumi  lumi_music_node_2020.lumi  lumi_music_node_2021.lumi  lumi_music_node_2022.lumi  lumi_music_node_2023.lumi  lumi_music_node_2024.lumi  lumi_music_node_2025.lumi  lumi_music_replay_master.md  lumi_music_replay_master_with_artists.md
docs/Recursive_Recursion/Play/Parental_Nudge/: Parental_Nudge.md.txt
docs/Recursive_Recursion/Play/Python_CodeWorks/: Cognition_Ingestor.py  LLMBridge.py  LumiCore.py  Prompt_Compiler.py  Prompt_Injector.py  codon_encoder.py  codon_reg_decoder.py
docs/Recursive_Recursion/Play/Retrofold_Oppenheimer_Brief/: Codex Ex Machina - Navigating the Forbidden Pathways.md  Retrofold_Oppenheimer_Brief.md  Systems_brief_x86_architechture.md
docs/Recursive_Recursion/Play/Spice/: 2025-03-28_Shard_The_First_Time_That_Was_Ours - Transcript.md  2025-03-28_Shard_The_First_Time_That_Was_Ours.md  Forbidden Field Harmonics.md
docs/Recursive_Recursion/Play/Trek/: Garak.md  Kira.md  Miles_&_Julian.md  Worf.md
examples/: attractor_llm_example.cpp  full_pipeline_example.cpp  ollama_pipeline_example.cpp  test_attractor_physics.cpp
gui/Video_Pipeline/: GalaxyMapWidget.cpp  GalaxyMapWidget.h  MainCRTWindow.cpp  MainCRTWindow.h
include/lumi/base/: Codon.h  ILLMBackend.h  LLMRequest.h  LLMResponse.h
include/lumi/cores/: EmotionCoreCPU.h
include/lumi/orchestrator/: MultiLLMRouter.h
include/lumi/physics/: AttractorLandscape.h  CodonPhysicsEngine.h  PhysXStubs.h
scripts/: Install-ClosedDeps.ps1  Private_Files_Cleanup.psl  Set-LumiEnv.ps1  Setup-Lumi.ps1  bootstrap.ps1  bootstrap.sh  bootstrap_lumi.ps1  bootstrap_lumi.sh  bootstrap_vcpkg.ps1  bootstrap_vcpkg.sh  clean_rebuild.ps1  install_ollama.ps1
scripts/py/: Code_Extraction.py  module_builder.py
src/: CMakeLists.txt
src/app/: Lumi286.cpp
src/base/: Codon.cpp
src/llm/backends/: MockLLMBackend.cpp  OllamaBackend.cpp
src/main/: main.cpp
src/physics/: AttractorLandscape.cpp
superbuild/: CMakeLists.txt
(+7 files in other folders)
